--- a/home_nav.html
+++ b/home_nav.html
@@ -71,9 +71,12 @@
                 <button type="button" class="btn btn-primary btn-lg">Get Started</button>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="img/background.png" class="car_img" alt="Chicago" width="100%" height="auto">
-          </div>
+            <div class="carousel-item">
+                <div>
+                    <img src="img/DevOps.png" class="car_img" alt="Chicago" height="auto">
+          
+                </div>
+            </div>
           <div class="carousel-item">
             <img src="img/background3.png" class="car_img" alt="New York" width="100%" height="auto">
           </div>
